--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -1,6 +1,8 @@
 .sidebar {
     flex: 0.30;
     border-right: 2px solid lightgray;
+    display: flex;
+    flex-direction: column;
 }
 
 /* header */
@@ -56,4 +58,9 @@
 a {
     text-decoration: none;
     color: black;
+}
+
+.sidebar__chats {
+    flex: 1;
+    overflow: scroll;
 }
