--- a/src/Chat.css
+++ b/src/Chat.css
@@ -50,7 +50,7 @@
     background-repeat: repeat;
     background-position: center;
     padding: 30px;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .chat__message {
